--- a/public/html_backup/op_auth_signin_box_alt.html
+++ b/public/html_backup/op_auth_signin_box_alt.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en" class="remember-theme">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <!--
       Available classes for <html> element:
@@ -22,7 +23,8 @@
     <!-- Open Graph Meta -->
     <meta property="og:title" content="Dashmix - Bootstrap 5 Admin Template &amp; UI Framework">
     <meta property="og:site_name" content="Dashmix">
-    <meta property="og:description" content="Dashmix - Bootstrap 5 Admin Template &amp; UI Framework created by pixelcave">
+    <meta property="og:description"
+        content="Dashmix - Bootstrap 5 Admin Template &amp; UI Framework created by pixelcave">
     <meta property="og:type" content="website">
     <meta property="og:url" content="">
     <meta property="og:image" content="">
@@ -44,9 +46,9 @@
 
     <!-- Load and set color theme + dark mode preference (blocking script to prevent flashing) -->
     <script src="assets/js/setTheme.js"></script>
-  </head>
+</head>
 
-  <body>
+<body>
     <!-- Page Container -->
     <!--
       Available classes for #page-container:
@@ -94,82 +96,96 @@
     -->
     <div id="page-container">
 
-      <!-- Main Container -->
-      <main id="main-container">
-        <!-- Page Content -->
-        <div class="bg-image" style="background-image: url('assets/media/photos/photo19@2x.jpg');">
-          <div class="row g-0 justify-content-center bg-primary-dark-op">
-            <div class="hero-static col-sm-8 col-md-6 col-xl-4 d-flex align-items-center p-2 px-sm-0">
-              <!-- Sign In Block -->
-              <div class="block block-transparent block-rounded w-100 mb-0 overflow-hidden">
-                <div class="block-content block-content-full px-lg-5 px-xl-6 py-4 py-md-5 py-lg-6 bg-body-extra-light">
-                  <!-- Header -->
-                  <div class="mb-2 text-center">
-                    <a class="link-fx fw-bold fs-1" href="index.html">
-                      <span class="text-dark">Dash</span><span class="text-primary">mix</span>
-                    </a>
-                    <p class="text-uppercase fw-bold fs-sm text-muted">Sign In</p>
-                  </div>
-                  <!-- END Header -->
+        <!-- Main Container -->
+        <main id="main-container">
+            <!-- Page Content -->
+            <div class="bg-image" style="background-image: url('assets/media/photos/photo19@2x.jpg');">
+                <div class="row g-0 justify-content-center bg-primary-dark-op">
+                    <div class="hero-static col-sm-8 col-md-6 col-xl-4 d-flex align-items-center p-2 px-sm-0">
+                        <!-- Sign In Block -->
+                        <div class="block block-transparent block-rounded w-100 mb-0 overflow-hidden">
+                            <div
+                                class="block-content block-content-full px-lg-5 px-xl-6 py-4 py-md-5 py-lg-6 bg-body-extra-light">
+                                <!-- Header -->
+                                <div class="mb-2 text-center">
+                                    <a class="link-fx fw-bold fs-1" href="index.html">
+                                        <span class="text-dark">Dash</span><span class="text-primary">mix</span>
+                                    </a>
+                                    <p class="text-uppercase fw-bold fs-sm text-muted">Sign In</p>
+                                </div>
+                                <!-- END Header -->
 
-                  <!-- Sign In Form -->
-                  <!-- jQuery Validation (.js-validation-signin class is initialized in js/pages/op_auth_signin.min.js which was auto compiled from _js/pages/op_auth_signin.js) -->
-                  <!-- For more info and examples you can check out https://github.com/jzaefferer/jquery-validation -->
-                  <form class="js-validation-signin" action="be_pages_auth_all.html" method="POST">
-                    <div class="mb-4">
-                      <div class="input-group input-group-lg">
-                        <input type="text" class="form-control" id="login-username" name="login-username" placeholder="Username">
-                        <span class="input-group-text">
-                          <i class="fa fa-user-circle"></i>
-                        </span>
-                      </div>
+                                <!-- Sign In Form -->
+                                <!-- jQuery Validation (.js-validation-signin class is initialized in js/pages/op_auth_signin.min.js which was auto compiled from _js/pages/op_auth_signin.js) -->
+                                <!-- For more info and examples you can check out https://github.com/jzaefferer/jquery-validation -->
+                                <form class="js-validation-signin" action="be_pages_auth_all.html" method="POST">
+                                    <div class="mb-4">
+                                        <div class="input-group input-group-lg">
+                                            <input type="text" class="form-control" id="login-username"
+                                                name="login-username" placeholder="Username">
+                                            <span class="input-group-text">
+                                                <i class="fa fa-user-circle"></i>
+                                            </span>
+                                        </div>
+                                    </div>
+                                    <div class="mb-4">
+                                        <div class="input-group input-group-lg">
+                                            <input type="password" class="form-control" id="login-password"
+                                                name="login-password" placeholder="Password">
+                                            <span class="input-group-text">
+                                                <i class="fa fa-asterisk"></i>
+                                            </span>
+                                        </div>
+                                    </div>
+                                    <div
+                                        class="d-sm-flex justify-content-sm-between align-items-sm-center text-center text-sm-start mb-4">
+                                        <div class="form-check">
+                                            <input type="checkbox" class="form-check-input" id="login-remember-me"
+                                                name="login-remember-me" checked>
+                                            <label class="form-check-label" for="login-remember-me">Remember Me</label>
+                                        </div>
+                                        <div class="fw-semibold fs-sm py-1">
+                                            <a href="javascript:void(0)">Forgot Password?</a>
+                                        </div>
+                                    </div>
+                                    <div class="text-center mb-4">
+                                        <button type="submit" class="btn btn-hero btn-primary">
+                                            <i class="fa fa-fw fa-sign-in-alt opacity-50 me-1"></i> Sign In
+                                        </button>
+                                    </div>
+                                </form>
+                                <!-- END Sign In Form -->
+                            </div>
+                            <div class="block-content bg-body">
+                                <div class="d-flex justify-content-center text-center push">
+                                    <a class="item item-circle item-tiny me-1 bg-default" data-toggle="theme"
+                                        data-theme="default" href="#"></a>
+                                    <a class="item item-circle item-tiny me-1 bg-xwork" data-toggle="theme"
+                                        data-theme="assets/css/themes/xwork.min.css" href="#"></a>
+                                    <a class="item item-circle item-tiny me-1 bg-xmodern" data-toggle="theme"
+                                        data-theme="assets/css/themes/xmodern.min.css" href="#"></a>
+                                    <a class="item item-circle item-tiny me-1 bg-xeco" data-toggle="theme"
+                                        data-theme="assets/css/themes/xeco.min.css" href="#"></a>
+                                    <a class="item item-circle item-tiny me-1 bg-xsmooth" data-toggle="theme"
+                                        data-theme="assets/css/themes/xsmooth.min.css" href="#"></a>
+                                    <a class="item item-circle item-tiny me-1 bg-xinspire" data-toggle="theme"
+                                        data-theme="assets/css/themes/xinspire.min.css" href="#"></a>
+                                    <a class="item item-circle item-tiny me-1 bg-xdream" data-toggle="theme"
+                                        data-theme="assets/css/themes/xdream.min.css" href="#"></a>
+                                    <a class="item item-circle item-tiny me-1 bg-xpro" data-toggle="theme"
+                                        data-theme="assets/css/themes/xpro.min.css" href="#"></a>
+                                    <a class="item item-circle item-tiny bg-xplay" data-toggle="theme"
+                                        data-theme="assets/css/themes/xplay.min.css" href="#"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- END Sign In Block -->
                     </div>
-                    <div class="mb-4">
-                      <div class="input-group input-group-lg">
-                        <input type="password" class="form-control" id="login-password" name="login-password" placeholder="Password">
-                        <span class="input-group-text">
-                          <i class="fa fa-asterisk"></i>
-                        </span>
-                      </div>
-                    </div>
-                    <div class="d-sm-flex justify-content-sm-between align-items-sm-center text-center text-sm-start mb-4">
-                      <div class="form-check">
-                        <input type="checkbox" class="form-check-input" id="login-remember-me" name="login-remember-me" checked>
-                        <label class="form-check-label" for="login-remember-me">Remember Me</label>
-                      </div>
-                      <div class="fw-semibold fs-sm py-1">
-                        <a href="javascript:void(0)">Forgot Password?</a>
-                      </div>
-                    </div>
-                    <div class="text-center mb-4">
-                      <button type="submit" class="btn btn-hero btn-primary">
-                        <i class="fa fa-fw fa-sign-in-alt opacity-50 me-1"></i> Sign In
-                      </button>
-                    </div>
-                  </form>
-                  <!-- END Sign In Form -->
                 </div>
-                <div class="block-content bg-body">
-                  <div class="d-flex justify-content-center text-center push">
-                    <a class="item item-circle item-tiny me-1 bg-default" data-toggle="theme" data-theme="default" href="#"></a>
-                    <a class="item item-circle item-tiny me-1 bg-xwork" data-toggle="theme" data-theme="assets/css/themes/xwork.min.css" href="#"></a>
-                    <a class="item item-circle item-tiny me-1 bg-xmodern" data-toggle="theme" data-theme="assets/css/themes/xmodern.min.css" href="#"></a>
-                    <a class="item item-circle item-tiny me-1 bg-xeco" data-toggle="theme" data-theme="assets/css/themes/xeco.min.css" href="#"></a>
-                    <a class="item item-circle item-tiny me-1 bg-xsmooth" data-toggle="theme" data-theme="assets/css/themes/xsmooth.min.css" href="#"></a>
-                    <a class="item item-circle item-tiny me-1 bg-xinspire" data-toggle="theme" data-theme="assets/css/themes/xinspire.min.css" href="#"></a>
-                    <a class="item item-circle item-tiny me-1 bg-xdream" data-toggle="theme" data-theme="assets/css/themes/xdream.min.css" href="#"></a>
-                    <a class="item item-circle item-tiny me-1 bg-xpro" data-toggle="theme" data-theme="assets/css/themes/xpro.min.css" href="#"></a>
-                    <a class="item item-circle item-tiny bg-xplay" data-toggle="theme" data-theme="assets/css/themes/xplay.min.css" href="#"></a>
-                  </div>
-                </div>
-              </div>
-              <!-- END Sign In Block -->
             </div>
-          </div>
-        </div>
-        <!-- END Page Content -->
-      </main>
-      <!-- END Main Container -->
+            <!-- END Page Content -->
+        </main>
+        <!-- END Main Container -->
     </div>
     <!-- END Page Container -->
 
@@ -189,5 +205,6 @@
 
     <!-- Page JS Code -->
     <script src="assets/js/pages/op_auth_signin.min.js"></script>
-  </body>
+</body>
+
 </html>
